Amon: :bug: Fix GUI layout

--- a/src/asciimon.tex
+++ b/src/asciimon.tex
@@ -1,14 +1,10 @@
-\documentclass[12pt, a4paper, footexclude, headexclude]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[margin=0.5in]{geometry}
+\usepackage[margin=0.5in, bottom=0.1in]{geometry}
 
-% \usepackage[utf8x]{inputenc}
-% \usepackage[T1]{fontenc}
-% \usepackage[ngerman]{babel}
-% \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
 \usepackage{multicol}
 \usepackage{booktabs}
@@ -984,7 +980,7 @@ function hint() {
         field.hidden = false;
         % height 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [298, 155, 596, 0];
+        field.rect = [298, 145, 595, 0];
         field.delay = false;
     }
 }
