--- a/src/asciimon.tex
+++ b/src/asciimon.tex
@@ -21,10 +21,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Obacht: It is discuraged to use a field with size bigger than 15x15 since the pdf might get
-% to slow to play
-\def\fieldWidth{30}
-\def\fieldHeight{15}
+% These should not be changed
+\def\boardCharsW{30}
+\def\boardCharsH{15}
 \def\atkAnimCells{20}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -39,8 +38,8 @@ one of them has no health left. If the enemy is beaten a new creature is selecte
 If your own creature dies you lose, unless you previously caught another one.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const BOARD_CHARS_W = AFMakeNumber(\boardCharsW);
+const BOARD_CHARS_H = AFMakeNumber(\boardCharsH);
 const ATK_ANIM_CELLS = AFMakeNumber(\atkAnimCells);
 const SCREEN_TEXT_WIDTH = 400;
 const ROUND_ANIMATION_SPEED = 100;
@@ -63,22 +62,21 @@ const ITEM_SELECT = 7;
 const ACTION_IDLE = -1
 const ACTION_P_CHOOSE = 0;
 const ACTION_P_ATTACK = 1;
-const ACTION_E_HP_UPDATE = 3;
-const ACTION_E_CHOOSE = 4;
-const ACTION_E_ATTACK = 5;
-const ACTION_P_HP_UPDATE = 6;
-const ACTION_P_CHANGE = 7;
-const ACTION_END = 8;
+const ACTION_E_HP_UPDATE = 2;
+const ACTION_E_CHOOSE = 3;
+const ACTION_E_ATTACK = 4;
+const ACTION_P_HP_UPDATE = 5;
+const ACTION_END = 6;
 
 % Turns
 const PLAYER = 0;
 const ENEMY = 1;
 
 % Animation
-const CENTER_M = FIELD_HEIGHT * 0.5;
+const CENTER_M = BOARD_CHARS_H * 0.5;
 const PADDING_SYMB = " ";
 % https://stackoverflow.com/questions/16885297/
-const EMPTY_LINE = Array(FIELD_WIDTH + 2).join(PADDING_SYMB);
+const EMPTY_LINE = Array(BOARD_CHARS_W + 2).join(PADDING_SYMB);
 
 % Particle duration and state indicator
 const ATK_DURATION = 15;
@@ -117,7 +115,7 @@ var enemyBeaten = false;
 % Interval for saving the creature change visualization
 var changeAnimationInterval;
 % Current state of the animation
-var animationProgress = FIELD_WIDTH;
+var animationProgress = BOARD_CHARS_W;
 % Indicate whether the canvas are currently drawing a creature
 var drawing = true;
 % The interval for processing a round (uses the turnState to terminate)
@@ -860,17 +858,17 @@ function initialiseButtons() {
 
     % Adjust text size and font
     var cell;
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
+    for (var m = 0; m < BOARD_CHARS_H; m++) {
         cell = this.getField("player" + m);
-        cell.textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+        cell.textSize = SCREEN_TEXT_WIDTH / BOARD_CHARS_W;
         cell.textFont = font.Cour;
 
         cell = this.getField("enemy" + m);
-        cell.textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+        cell.textSize = SCREEN_TEXT_WIDTH / BOARD_CHARS_W;
         cell.textFont = font.Cour;
     }
 
-    % Info field setup
+    % Info GUI setup
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
@@ -973,8 +971,7 @@ function hint() {
         field.hidden = true;
         field.delay = false;
     } else {
-        % Move the tooltip field to the center of the screen
-        % and adjust the size so the text can be displayed
+        % Create an overlay
         var field = this.getField("hintbox");
         field.delay = true;
         field.hidden = false;
@@ -1728,9 +1725,9 @@ function defaultParticleSys() {
         DEAD, [0, 0], % STATE, POS
         0, 0, % SYMB, ROTATION
         2, [0, 0],  % MASS, MOMENTUM
-        canvas.halfWidth / FIELD_HEIGHT, % WIDTH
-        canvas.halfHeight / FIELD_HEIGHT, % HEIGHT
-        (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 1.3 % SIZE
+        canvas.halfWidth / BOARD_CHARS_H, % WIDTH
+        canvas.halfHeight / BOARD_CHARS_H, % HEIGHT
+        (SCREEN_TEXT_WIDTH / BOARD_CHARS_W) * 1.3 % SIZE
     ]);
 
     % Needed because the water changes the fill color
@@ -1742,7 +1739,7 @@ function defaultParticleSys() {
         iterationCur: 0,
         aliveParticles: 0,
         alignment: "center",
-        particleCount: FIELD_WIDTH,
+        particleCount: BOARD_CHARS_W,
         particleSymbols: ["X"],
         particleLifetime: ATK_DURATION - 1,
         particleMultiline: false,
@@ -1757,7 +1754,7 @@ function defaultParticleSys() {
             return true;
         },
         remove: function(p) {
-            hideParticleField(p);
+            hideParticle(p);
             particles[p][STATE] = DEAD;
             this.aliveParticles--;
         },
@@ -1774,12 +1771,12 @@ function defaultParticleSys() {
  */
 function setCanvasData() {
     const PLAYER_TOP_RECT = this.getField("player0").rect;
-    const PLAYER_BOT_RECT = this.getField("player" + (FIELD_HEIGHT - 1)).rect;
+    const PLAYER_BOT_RECT = this.getField("player" + (BOARD_CHARS_H - 1)).rect;
     const L_P = PLAYER_TOP_RECT[0];
     const B_P = PLAYER_BOT_RECT[3];
 
     const ENEMY_TOP_RECT = this.getField("enemy0").rect;
-    const ENEMY_BOT_RECT = this.getField("enemy" + (FIELD_HEIGHT - 1)).rect;
+    const ENEMY_BOT_RECT = this.getField("enemy" + (BOARD_CHARS_H - 1)).rect;
     const L_E = ENEMY_TOP_RECT[0];
     const B_E = ENEMY_BOT_RECT[3];
 
@@ -1877,7 +1874,7 @@ function waterParticles(target) {
     particleSys.particleLifetime = (ATK_DURATION - 1) * 2;
     particleSys.particleSymbols = ["(", " )", "(", "(", "(", " )", " )", "(", " )", " )", ""];
     particleSys.particleBold = true;
-    particleSys.particleCount = FIELD_WIDTH / 2.0 + 1;
+    particleSys.particleCount = BOARD_CHARS_W / 2.0 + 1;
 
     % Prepare a particle as an white overlay to conceal the target creature
     var particle = this.getField("atkanim" + 0);
@@ -1952,7 +1949,7 @@ function airParticles(target) {
     % Emit a particle that is part of a group containing 'memberCount' many particles
     particleSys.emit = function(p) {
         % Create a particle with same width as height
-        particles[p][WIDTH] = (canvas.halfWidth / FIELD_WIDTH) * 2.5;
+        particles[p][WIDTH] = (canvas.halfWidth / BOARD_CHARS_W) * 2.5;
 
         % Determine the leader to which the particle belongs
         const memberCount = 4;
@@ -2060,9 +2057,9 @@ function stoneParticles(target) {
 
     particleSys.emit = function(p) {
         % Create a particle with same width as height
-        particles[p][WIDTH] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][HEIGHT] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 0.9;
+        particles[p][WIDTH] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][HEIGHT] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / BOARD_CHARS_W) * 0.9;
 
         const s = (canvas.l[target] + particles[p][WIDTH]);
         const w = (canvas.halfWidth - particles[p][WIDTH]) * 2.0;
@@ -2134,7 +2131,7 @@ function grassParticles(target) {
         const offset = 70;
         const offsetY = -offset * 0.5 + getRandomInt(offset);
         particles[p][POS][Y] = canvas.c[(target + 1) \% 2][Y] + offsetY;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 0.9;
+        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / BOARD_CHARS_W) * 0.9;
         particles[p][ROTATION] = 90;
 
         particles[p][SYMB] = getRandomInt(particleSys.particleSymbols.length);
@@ -2196,9 +2193,9 @@ function fluffParticles(target) {
     particleSys.force = [0, 0];
 
     particleSys.emit = function(p) {
-        particles[p][WIDTH] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][HEIGHT] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) / 3.0;
+        particles[p][WIDTH] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][HEIGHT] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / BOARD_CHARS_W) / 3.0;
         particles[p][POS] = canvas.c[(target + 1) \% 2];
 
         % Different physics since the canvas elements are not equal in height
@@ -2317,9 +2314,9 @@ function standardParticles(target) {
     particleSys.particleCount = 1;
 
     particleSys.emit = function(p) {
-        particles[p][WIDTH] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][HEIGHT] = (canvas.halfHeight / FIELD_HEIGHT) * 2.0;
-        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / FIELD_WIDTH) * 2.0;
+        particles[p][WIDTH] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][HEIGHT] = (canvas.halfHeight / BOARD_CHARS_H) * 2.0;
+        particles[p][SIZE] = (SCREEN_TEXT_WIDTH / BOARD_CHARS_W) * 2.0;
         particles[p][POS] = canvas.c[target];
 
         particles[p][STATE]++;
@@ -2366,9 +2363,9 @@ function processParticles() {
 
         particleSys.move(p);
         % Draw the particle rectangle
-        moveParticleField(p);
+        moveParticleRect(p);
         % Process particle content and appearance
-        showAndUpdateParticleField(p);
+        showAndUpdateParticle(p);
 
         particles[p][STATE]++;
     }
@@ -2381,7 +2378,7 @@ function processParticles() {
  * by using position, width and height.
  * @param {Number} p The particle index.
  */
-function moveParticleField(p) {
+function moveParticleRect(p) {
     var particle = this.getField("atkanim" + p);
 
     const x = particles[p][POS][X];
@@ -2398,7 +2395,7 @@ function moveParticleField(p) {
  * For example: multiline, textfont, textsize, rotation.
  * @param {Number} p The particle index.
  */
-function showAndUpdateParticleField(p) {
+function showAndUpdateParticle(p) {
     var particle = this.getField("atkanim" + p);
 
     particle.hidden = false;
@@ -2430,7 +2427,7 @@ function showAndUpdateParticleField(p) {
  * Hide the given particle.
  * @param {Number} p The particle index.
  */
-function hideParticleField(p) {
+function hideParticle(p) {
     var particle = this.getField("atkanim" + p);
     particle.hidden = true;
 }
@@ -2469,15 +2466,15 @@ function frameEnemy() {
 function frame(owners) {
     if (animationProgress < 0) {
         app.clearInterval(changeAnimationInterval);
-        animationProgress = FIELD_WIDTH;
+        animationProgress = BOARD_CHARS_W;
         drawing = false;
         return;
     }
 
     for (var idx = 0; idx < owners.length; idx++) {
         % Shift all lines
-        for (var m = 0; m < FIELD_HEIGHT; m++) {
-            shiftFieldLeft(owners[idx] + m);
+        for (var m = 0; m < BOARD_CHARS_H; m++) {
+            shiftCanvasLeft(owners[idx] + m);
         }
     }
 
@@ -2485,8 +2482,8 @@ function frame(owners) {
 }
 
 /**
- * Adds the current creature of the given owner to the corresponding field.
- * The strings are simply concatenated line by line to the current field value.
+ * Adds the current creature of the given owner to the corresponding canvas.
+ * The strings are simply concatenated line by line to the current canvas value.
  * @param {Number} owner The owner, being either the player or the enemy.
  */
 function addCurCreature(owner) {
@@ -2499,7 +2496,7 @@ function addCurCreature(owner) {
 
     % Calculate the needed padding to center the current creature.
     % Uses the complete width and the amount of cells occupied by the creature string.
-    var paddingSize = FIELD_WIDTH - creature[IMAGE][0].length + 1;
+    var paddingSize = BOARD_CHARS_W - creature[IMAGE][0].length + 1;
     var paddingSizeLeft = Math.floor(paddingSize * 0.5);
     var paddingSizeRight = Math.ceil(paddingSize * 0.5);
     % Create padding string
@@ -2517,22 +2514,22 @@ function addCurCreature(owner) {
 
     % Add the string of the new creature
     var valueString = "";
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
+    for (var m = 0; m < BOARD_CHARS_H; m++) {
         % Centering the creature and add padding top and bottom
         if (startM <= m && m < startM + creature[IMAGE].length) {
             var lineString = creature[IMAGE][m - startM];
-            if (lineString.length > FIELD_WIDTH) {
-                lineString = lineString.substring(0, FIELD_WIDTH + 1);
+            if (lineString.length > BOARD_CHARS_W) {
+                lineString = lineString.substring(0, BOARD_CHARS_W + 1);
             }
             valueString = paddingLeft + lineString + paddingRight;
         } else {
             valueString = EMPTY_LINE;
         }
-        % Add to the field belonging to the owner
+        % Add to the canvas belonging to the owner
         if (owner == PLAYER) {
-            addToField("player" + m, valueString);
+            addToCanvas("player" + m, valueString);
         } else {
-            addToField("enemy" + m, valueString);
+            addToCanvas("enemy" + m, valueString);
         }
     }
 }
@@ -2566,21 +2563,21 @@ function drawPlayer() {
 }
 
 /**
- * Completely fills the enemy and the player fields with empty lines.
+ * Completely fills the enemy and the player canvas with empty lines.
  */
 function fill() {
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        setField("enemy" + m, EMPTY_LINE);
-        setField("player" + m, EMPTY_LINE);
+    for (var m = 0; m < BOARD_CHARS_H; m++) {
+        setCanvas("enemy" + m, EMPTY_LINE);
+        setCanvas("player" + m, EMPTY_LINE);
     }
 }
 
 /**
- * Shift the value of the given field.
+ * Shift the value of the given canvas.
  *
- * @param {Number} id The id of the field.
+ * @param {Number} id The id of the canvas.
  */
-function shiftFieldLeft(id) {
+function shiftCanvasLeft(id) {
     var cell = this.getField(id);
     cell.delay = true;
     cell.value = cell.value.substring(1);
@@ -2588,12 +2585,12 @@ function shiftFieldLeft(id) {
 }
 
 /**
- * Set string of the given field.
+ * Set string of the given canvas.
  *
- * @param {Number} id The id of the field.
+ * @param {Number} id The id of the canvas.
  * @param {String} value The value to set.
  */
-function setField(id, value) {
+function setCanvas(id, value) {
     var cell = this.getField(id);
     cell.delay = true;
     cell.value = value;
@@ -2601,12 +2598,12 @@ function setField(id, value) {
 }
 
 /**
- * Add string to the given field.
+ * Add string to the given canvas.
  *
- * @param {Number} id The id of the field.
+ * @param {Number} id The id of the canvas.
  * @param {String} value The value to add.
  */
-function addToField(id, value) {
+function addToCanvas(id, value) {
     var cell = this.getField(id);
     cell.delay = true;
     cell.value += value;
@@ -2691,7 +2688,7 @@ function addInfoText(text) {
         \end{multicols}
 
         % Calculate the max width and height of a block
-        \def\blocksizeH{\dimexpr (250 pt)/\fieldHeight \relax}
+        \def\blocksizeH{\dimexpr (250 pt)/\boardCharsH \relax}
         \def\blocksizeW{\dimexpr (250 pt) \relax}
 
         \begin{multicols}{2}
@@ -2710,7 +2707,7 @@ function addInfoText(text) {
             \vspace{2.5cm}
 
             \begin{center}
-                \xintFor* #1 in {\xintSeq{0}{\fieldHeight-1}} \do {%
+                \xintFor* #1 in {\xintSeq{0}{\boardCharsH-1}} \do {%
                     \TextField[%
                         width=\blocksizeW, height=\blocksizeH,%
                         bordercolor=white, name=player#1, readonly=true%
@@ -2722,7 +2719,7 @@ function addInfoText(text) {
         \columnbreak%
 
             \begin{center}
-                \xintFor* #1 in {\xintSeq{0}{\fieldHeight-1}} \do {%
+                \xintFor* #1 in {\xintSeq{0}{\boardCharsH-1}} \do {%
                     \TextField[%
                         width=\blocksizeW, height=\blocksizeH,%
                         bordercolor=white, name=enemy#1, readonly=true%
